--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Aria - Business HTML Landing Page Template</title>
+    <title>Aria - Business HTML Landing Page Template test</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -72,7 +72,7 @@
                     <a class="nav-link page-scroll" href="#services">SERVICES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
+                    <a class="nav-link page-scroll" href="#callMe">CALLE ME</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#projects">PROJECTS</a>
