--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Cuisine</h4>
-                            <p>Tunisian cuisine developed from Berbers, ancient Carthage, Rome, the Islamic conquest of the Maghreb, and the Ottoman Empire. The cuisine has been strongly influenced by French and Italian (especially Sicilian) cooking.During its era of French colonial rule Tunisia marketed its difference to metropolitan France meaning it played on French perceptions of "difference" (Orientalism) to sell the produce of the colonies to France. The majority of restaurants that catered to international visitors did not serve authentic colonial cuisine. Exoticness and difference were emphasized instead in souks and eateries. The European settlers who traveled to and from France shared their food experiences with the metropolitan French, but authentic Tunisian cuisine did not become integrated into the popular cuisine coloniale category of French cuisine.</p>
+                            <p>Tunisian cuisine developed from Berbers, ancient Carthage, Rome, the Islamic conquest of the Maghreb, and the Ottoman Empire. The cuisine has been strongly influenced by French and Italian (especially Sicilian) cooking.During its era of French colonial rule Tunisia marketed its difference to metropolitan France meaning it played on French perceptions of "difference" (Orientalism) to sell the produce of the colonies to France.</p>
                         </div>
                     </div>
                     <!-- end of card -->
