--- a/index.html
+++ b/index.html
@@ -888,24 +888,22 @@
     <div class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <div class="text-container about">
-                        <h4>Few Words</h4>
-                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
+                        <h4>Disclaimers</h4>
+                        <p class="white">
+                            All the information on this website is published in good faith and for general information purpose only. This website does not make any warranties about the completeness, reliability and accuracy of this information. Any action you take upon the information you find on this website , is strictly at your own risk. will not be liable for any losses and/or damages in connection with the use of our website.
+From our website, you can visit other websites by following hyperlinks to such external sites. While we strive to provide only quality links to useful and ethical websites, we have no control over the content and nature of these sites. These links to other websites do not imply a recommendation for all the content found on these sites.
+Site owners and content may change without notice and may occur before we have the opportunity to remove a link which may have gone 'bad'.
+Please be also aware that when you leave our website, other sites may have different privacy policies and terms which are beyond our control. Please be sure to check the Privacy Policies of these sites as well as their "Terms of Service" before engaging in any business or uploading any information.
+                        </p>
+                        <h4>Consent</h4>
+                        <p class="white">
+                            By using our website, you hereby consent to our disclaimer and agree to its terms.
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">                        
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">                       
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">                       
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+               
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
